Updated UserInput it now catches more inputs that are not numbers. Updated DisplaySearchResults, two different classes. One for console code, one for GUI. Added convert time function to DisplayRevisionData. Deleted unused console colors.